--- a/js_example_style.css
+++ b/js_example_style.css
@@ -1,87 +1,77 @@
-body{
-
-    height: auto;
-
-    width: 90%;
-
-    background-color:silver;
-
-    margin:auto;
-
-    text-align: center;
-
-   }
+body { box-sizing:border-box;
+       text-align:center;}
 
  
 
- p {
 
-    margin: auto;
-
-    width: 70%;
-
-    text-align: center;
+p { text-align: center;
 
     font: 440 16px/28px Roboto,sans-serif;
 
-    }
+  }
 
- /*producimos un acercamineto de los link*/
-button:hover,button:focus{
-        border-radius: 50%;
-        border: thick solid white;
-        color:rgb(4, 5, 1);
-        background:rgb(162, 162, 194);
-        -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
-        -webkit-box-shadow: 10px 10px 7pxrgba(0,0,0,.7);
-        box-shadow:10px 10px 7px rgba(0,0,0,.7);
-        -webkit-transform: scale(1.25);
-        -moz-transform: scale(1.25);
-        -o-transform: scale(1.25);
-    }
 
-.contenedor{
-
+.contenedor{        
         margin: auto;
-        background: violet;
-        border-radius:10%;
-        border: 10px solid white;/*color a los bordes del boton*/
-        box-shadow: 12px 12px 15px #000;/*sombras al div*/
+        background:cyan;
+        border-radius:2%;
+        border: 15px solid hotpink;/*color a los bordes del contenedor*/
+        box-shadow: 12px 12px 25px #000;/*sombras al div*/
         border-style:outset;        
-        width: 90%;
+        width:96%;
 
         }
 
 
-.code{
-     
+.entrada {
+     top:25px;
+     position:absolute;
+     text-align:left;
+        }
+.salida {
+      text-align:right;
+      margin:95%;
+      padding:95%;
+       }
+#startAndStop{
+           margin: auto;
+           align:center;
+           overflow:hidden;
+           /*background:url(perro.png);*/
+            }
+video{
+      margin: auto;
+      width:50%;
+      height:30%;
+      }
+canvas{
+       margin:auto;
+       width:90%;
+       height:70%;
+       }
+
+.code{     
      background:white;
      width:90%;
      border-radius:5%;
      border-style:outset;/*estilizamos el borde*/
-     box-shadow: 12px 12px 15px #000;
+     box-shadow: 12px 12px 15px teal;/*Sombras*/
      }
 .control{
-     width:100%;
-     border: 2px solid blue;
+      background:coral;
+      width:auto;
+      border: 2px solid blue;
 
-     border-radius:15%;
-     border-style:outset;/*estilizamos el titulo*/
+      border-radius:10%;
+      border-style:outset;/*estilizamos los bordes*/
+      border: 10px solid brown;/*color y grosor de los bordes*/
        
 }
 .err {
 
-    color: red;
+     color: red;
 
      font-weight: bold;
-
-     }
-
-.caption {
-
-     margin: 0;
-
-     font-weight:bold;
 
      }
 
@@ -96,12 +86,27 @@ button:hover,button:focus{
       }
 
 
+ /*producimos un acercamineto de los link*/
+
+button:hover,button:focus{
+        border-radius: 50%;
+        border: thick solid yellow;
+        color:rgb(5, 5, 1);
+        background:rgb(165, 162, 194);
+        -moz-box-shadow:10px 10px 7px rgba(0,0,0,.7);
+        -webkit-box-shadow: 10px 10px 7pxrgba(0,0,0,.7);
+        box-shadow:10px 10px 7px rgba(0,0,0,.7);
+        -webkit-transform: scale(1.25);
+        -moz-transform: scale(1.25);
+        -o-transform: scale(1.25);
+        }
+
 
 
 
 button {
     
-    width:20%;
+    width:40%;
 
     padding: 6px 12px;
 
@@ -132,8 +137,7 @@ button {
 
 
      
-    
-    box-shadow: 12px 12px 15px cyan;/*sombras a el boton*/
+    box-shadow: 12px 12px 18px pink;/*sombras a el boton*/
 
     
     }
@@ -152,4 +156,5 @@ button[disabled] {
 
     opacity: .55;
 }
+
 
